...
                          builder: (BuildContext context) {
                            return AlertDialog(
                              shape: RoundedRectangleBorder(
                                borderRadius: BorderRadius.circular(20),
                              ),
                              title: Text(
                                'Potrdi izbris',
                                style: TextStyle(
                                  color: AppColors.charcoal,
                                  fontWeight: FontWeight.bold,
                                ),
                              ),
                              content: Text(
...
                                    backgroundColor: AppColors.tomatoRed,
                                    foregroundColor: Colors.white,
                                    shape: RoundedRectangleBorder(
                                      borderRadius: BorderRadius.circular(12),
                                    ),
                                  ),
                                  child: const Text('Izbriši'),
                                ),
                              ],
                            );
                          },
                        );
                      } else if (direction == DismissDirection.startToEnd) {
...
